Fixing missing images on mobile

--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -432,6 +432,12 @@ section.module.parallax {
   section.module.parallax {
     background-attachment:initial;
   }
+  .sensei-team img {
+    /*margin: 30px auto;
+    width: 100%;
+    height: auto;*/
+    border: 4px solid grey;
+  }
 
 }
 
